Añadiendo mejoras menores